# Agatha

./: .gitignore  .gitmodules  HomeAutomationUnit.odt
Anne/: Anne.py  Dockerfile  docker-compose.yaml  mongo_database.py  requirements.txt
Anne/templates/: author.html  camera.html  celeste.html  index.html  jinjaTest.html  kitchen.html  sample_data.json
Infrastructure/: .clang-format  CMakeLists.txt
Infrastructure/cmake/: BuildInfo.cmake  DispUtils.cmake  FindThirdParty.cmake  FindZMQ.cmake  Package.cmake  Version.cmake
Infrastructure/docs/: Protocols.md
Infrastructure/src/: CMakeLists.txt  broker.cpp  broker.hpp  client.cpp  client.hpp  main.cpp  mainBroker.cpp  server.cpp  server.hpp
Infrastructure/src/Broker/: broker.cpp  broker.hpp  mainBroker.cpp
Infrastructure/src/Client/: client.cpp  client.hpp  mainClient.cpp
Infrastructure/src/PythonBroker/: temp.py  zhelpers.py
Infrastructure/src/Service/: mainService.cpp  server.cpp  server.hpp
Infrastructure/tests/: CMakeLists.txt  client_test.cpp  server_test.cpp
KitchenMonitor/: README.md  docker-compose.yaml  init-mongo.js  primer-dataset.json
KitchenMonitor/mongo-volume/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--7919658646136652528.wt  collection-2--7919658646136652528.wt  collection-8--7919658646136652528.wt  index-1--7919658646136652528.wt  index-10--7919658646136652528.wt  index-3--7919658646136652528.wt  index-6--7919658646136652528.wt  index-9--7919658646136652528.wt  sizeStorer.wt
KitchenMonitor/mongo-volume/diagnostic.data/: metrics.2020-08-19T08-57-55Z-00000  metrics.2020-08-19T08-58-04Z-00000  metrics.2020-08-27T20-51-26Z-00000  metrics.interim
RaspberryPi/VideoStreaming/: pivideostream.py  video_client.py  videostream.py
Surveillance/: requirments.txt  video_server.py
Surveillance/include/imutils/imutils/video/: videostream.py
TechnicalDocs/: .~lock.HomeAutomationUnit.odt#  HomeAutomationUnit.odt
database/mongo-data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-5301028570027990784.wt  collection-2-5301028570027990784.wt  collection-8-5301028570027990784.wt  index-1-5301028570027990784.wt  index-10-5301028570027990784.wt  index-3-5301028570027990784.wt  index-6-5301028570027990784.wt  index-9-5301028570027990784.wt  sizeStorer.wt
database/mongo-data/diagnostic.data/: metrics.2020-05-31T20-49-08Z-00000  metrics.2020-05-31T20-51-47Z-00000  metrics.2020-05-31T20-52-20Z-00000  metrics.2020-05-31T21-19-49Z-00000  metrics.2020-05-31T21-24-43Z-00000  metrics.2020-05-31T21-51-11Z-00000  metrics.2020-05-31T22-09-05Z-00000  metrics.2020-05-31T22-27-30Z-00000  metrics.2020-06-01T00-43-59Z-00000  metrics.2020-06-01T00-49-30Z-00000  metrics.2020-06-01T00-51-17Z-00000  metrics.2020-06-01T01-05-17Z-00000  metrics.2020-06-01T01-06-16Z-00000  metrics.2020-06-01T04-01-05Z-00000  metrics.2020-06-01T04-02-03Z-00000  metrics.2020-06-03T17-58-34Z-00000  metrics.2020-06-03T18-00-24Z-00000  metrics.2020-06-03T18-36-33Z-00000  metrics.2020-06-05T01-07-27Z-00000
